# Epico

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
epico-cpp/app/: Main.cpp
epico-cpp/include/: LogisticRegression.hpp  RandomDatasetGenerator.hpp
epico-cpp/include/FileWriter/: CsvFileWriter.hpp  FileWriter.hpp
epico-cpp/src/: CMakeLists.txt  RandomDatasetGenerator.cpp
epico-cpp/src/FileWriter/: CsvFileWriter.cpp
epico-python/: helper.py  main.py  metrics.py  models.py  plot.py  plots.py  plotting.py  plotting_helper.py  processes.py  requirements.txt  simulation.py  utils.py
include/: LogisticRegression.hpp  RandomDataset.hpp  Simulation.hpp  randomDatasetGenerator.hpp
python-rapids/: metrics.py  simulation.py  utils.py
spark-scala/src/main/scala/: Main.scala
spark-scala/src/main/scala/simulations/: BaseSimulation.scala  WithoutColumnExcluding.scala
src/: CMakeLists.txt  RandomDataset.cpp  Simulation.cpp  randomDatasetGenerator.cpp
